src/Standards/Generic/Tests/NamingConventions/TraitNameSuffixUnitTest.inc
<?php

trait BadName {} // error

trait GoodTrait {}

trait GoodTraitTrait {}

trait BadTraitName {} // error

trait BadTraitNametrait {}

trait NormalTraitNameTrait {}